# fry

./: Cargo.toml  README.md
.github/workflows/: ci.yml
data/: a.raw  abbr.txt  b.raw  c.raw  calc.py  d.raw  e.raw  f.raw  g.raw  generate_base.sh  h.raw  i.raw  j.raw  k.raw  l.raw  m.raw  n.raw  o.raw  p.raw  q.raw  r.raw  s.raw  space.raw  t.raw  u.raw  v.raw  w.raw  x.raw  y.raw  z.raw
fry/: Cargo.toml
fry/src/: lib.rs
fry_normalize/: Cargo.toml  README.md  t
fry_normalize/data/: abbr.txt
fry_normalize/src/: lib.rs
fry_normalize/week_notes/: week1.md
fry_pronounce/: Cargo.toml
fry_pronounce/data/: source.txt
fry_pronounce/src/: lib.rs
fry_pronounce/tests/: test_dict_works.rs
fry_tagging/: Cargo.toml
src/: lib.rs
