[package]
name = "fry"
version = "0.0.1"
edition = "2021"
description = "A dead-simple, no-alloc, no-std TTS."
license = "MIT OR Apache-2.0"
repository = "https://github.com/TTWNO/fry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_data = "1.0.0"
