[package]
name = "fry"
version = "0.0.2"
edition = "2021"
description = "A dead-simple, no-alloc, no-std TTS."
license = "MIT OR Apache-2.0"
repository = "https://github.com/TTWNO/fry"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
include_data = "1.0.0"
test-log = { version = "0.2.16", default-features = false, features = ["trace"], path = "../../test-log/" }
tracing = { version = "0.1.40", default-features = false, features = ["attributes"] }
