[package]
name = "fry_normalize"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigfloat = { version = "1.7.1", default-features = false }
num2words = { version = "1.2.0", git = "https://github.com/TTWNO/num2words", branch = "no-std-support", default-features = false }
